--- a/day-8/index.html
+++ b/day-8/index.html
@@ -13,6 +13,7 @@
       <button
         id="decrement-btn"
         style="background-color: darkseagreen; cursor: pointer; padding: 10px"
+        onclick="decrement()"
       >
         - Decrement
       </button>
