--- a/getElementById/index.html
+++ b/getElementById/index.html
@@ -25,5 +25,9 @@
     >
       Click Me!
     </button>
+
+    <h2>Create a button that hides a specific element with an id when clicked.</h2>
+    <p id="hides">Hide me</p>
+    <button type="button" onclick="document.getElementById('hides').style.display='none'">Click Me!</button>
   </body>
 </html>
