seperate js for task

--- a/getElementById/index.html
+++ b/getElementById/index.html
@@ -29,5 +29,13 @@
     <h2>Create a button that hides a specific element with an id when clicked.</h2>
     <p id="hides">Hide me</p>
     <button type="button" onclick="document.getElementById('hides').style.display='none'">Click Me!</button>
+
+    <h2>Create two buttons: "Show" and "Hide"</h2>
+  
+    <p id="toggle" style="display: none;">Toggle me</p>
+    
+    <button id="hideBtn">Hide Me!</button>
+    <button id="showBtn">Show Me!</button>
+    <script src="script.js"></script>
   </body>
 </html>
