multiple styles trigger

--- a/getElementById/index.html
+++ b/getElementById/index.html
@@ -36,6 +36,10 @@
     
     <button id="hideBtn">Hide Me!</button>
     <button id="showBtn">Show Me!</button>
+
+    <h2>Create a button that changes multiple styles (like background color, font size, and border) of an element with an id when clicked.</h2>
+    <p id="changeStyle" style="background-color: lightblue; font-size: 20px; border: 2px">Hi All! I'm Sakshi.</p>
+        <button type="button" onclick="document.getElementById('changeStyle').style.cssText ='font-size:40px; background-color:yellow; border:4px'">Click Me!</button>
     <script src="script.js"></script>
   </body>
 </html>
