--- a/blog-app/index.html
+++ b/blog-app/index.html
@@ -3,20 +3,7 @@
   <header>
     <title>BLOG-APP</title>
   </header>
-  <section id="blogs">
-    <h1>Title</h1>
-    <p>content</p>
-  </section>
-  <section
-    id="blogList"
-    style="
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    "
-  >
+  <section>
     <h2 style="text-align: center; font-size: 24px; color: #333">
       Submitted Blogs
     </h2>
