--- a/blog-app/add-blog.html
+++ b/blog-app/add-blog.html
@@ -76,5 +76,5 @@
       </div>
     </form>
   </section>
-  <script src="script.js"></script>
+  <script src="addBlog.js" type="module"></script>
 </body>
