--- a/blog-app/index.html
+++ b/blog-app/index.html
@@ -9,5 +9,5 @@
     </h2>
     <div id="blogs"></div>
   </section>
-  <script src="script.js"></script>
+  <script src="script.js" type="module"></script>
 </body>
