--- a/functions/index.html
+++ b/functions/index.html
@@ -1,1 +1,3 @@
-const x = function (a, b) {return a * b};
+
+<!-- Write a function called isEven that takes a number as input and returns true if the number is even, and false otherwise. -->
+<script src="sript.js"></script>
