--- a/functions/index.html
+++ b/functions/index.html
@@ -1,3 +1,4 @@
 
 <!-- Write a function called isEven that takes a number as input and returns true if the number is even, and false otherwise. -->
+<!-- Reverse a String -->
 <script src="sript.js"></script>
